--- a/index.html
+++ b/index.html
@@ -1,53 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="grid-exercise.css" />
+    <title>Grid-Exercise</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="grid-exercise.css">
-    <title>Учебный макет</title>
-</head>
-
-<body>
+  <body>
     <div class="grid-container">
-        <header class="header">
-            <h1 class="header-text">Шапка страницы</h1>
-        </header>
-        <div class="main-content">
-            <div class="main-text">
-                <h2>Основная часть</h2>
-            </div>
-            <div class="chapter-1">
-                <h2>Ещё часть 1</h2>
-            </div>
-            <div class="chapter-2">
-                <h2>Ещё часть 2</h2>
-            </div>
-            <div class="chapter-3">
-                <h2>Ещё часть 3</h2>
-            </div>
+      <header class="header">
+        <h1 class="header-text">Header</h1>
+      </header>
+      <div class="main-content">
+        <div class="main-text">
+          <h2>Main section</h2>
         </div>
-        <aside class="aside">
-            <h2>Боковая область</h2>
-        </aside>
-        <footer class="footer">
-            <section class="section-1">
-                <h2>Секция футера 1</h2>
-            </section>
-            <section class="section-2">
-                <h2>Секция футера 2</h2>
-            </section>
-            <section class="section-3">
-                <h2>Секция футера 3</h2>
-            </section>
-            <section class="section-4">
-                <h2>Секция футера 4</h2>
-            </section>
-        </footer>
+        <div class="chapter-1">
+          <h2>One more section 1</h2>
+        </div>
+        <div class="chapter-2">
+          <h2>One more section 2</h2>
+        </div>
+        <div class="chapter-3">
+          <h2>One more section 3</h2>
+        </div>
+      </div>
+      <aside class="aside">
+        <h2>Aside</h2>
+      </aside>
+      <footer class="footer">
+        <section class="section-1">
+          <h2>Footer section 1</h2>
+        </section>
+        <section class="section-2">
+          <h2>Footer section 2</h2>
+        </section>
+        <section class="section-3">
+          <h2>Footer section 3</h2>
+        </section>
+        <section class="section-4">
+          <h2>footer section 4</h2>
+        </section>
+      </footer>
     </div>
-</body>
+  </body>
+</html>
