--- a/index.html
+++ b/index.html
@@ -18,37 +18,37 @@
   <body>
     <div class="grid-container">
       <header class="header">
-        <h1 class="header-text">Header</h1>
+        <h1>Header</h1>
       </header>
       <div class="main-content">
         <div class="main-text">
           <h2>Main section</h2>
         </div>
-        <div class="chapter-1">
-          <h2>One more section 1</h2>
-        </div>
-        <div class="chapter-2">
-          <h2>One more section 2</h2>
-        </div>
-        <div class="chapter-3">
-          <h2>One more section 3</h2>
-        </div>
+        <article class="chapter-1">
+          <h3>One more section 1</h3>
+        </article>
+        <article class="chapter-2">
+          <h3>One more section 2</h3>
+        </article>
+        <article class="chapter-3">
+          <h3>One more section 3</h3>
+        </article>
       </div>
       <aside class="aside">
         <h2>Aside</h2>
       </aside>
       <footer class="footer">
-        <section class="section-1">
-          <h2>Footer section 1</h2>
+        <section>
+          <h3>Footer section 1</h3>
         </section>
-        <section class="section-2">
-          <h2>Footer section 2</h2>
+        <section>
+          <h3>Footer section 2</h3>
         </section>
-        <section class="section-3">
-          <h2>Footer section 3</h2>
+        <section>
+          <h3>Footer section 3</h3>
         </section>
-        <section class="section-4">
-          <h2>footer section 4</h2>
+        <section>
+          <h3>Footer section 4</h3>
         </section>
       </footer>
     </div>
