renamed styles css, upd class names

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="normalize.css" />
-    <link rel="stylesheet" href="grid-exercise.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Grid-Exercise</title>
   </head>
 
@@ -20,23 +20,27 @@
       <header class="header">
         <h1>Header</h1>
       </header>
-      <div class="main-content">
-        <div class="main-text">
-          <h2>Main section</h2>
+      <main class="main">
+        <div class="main-content">
+          <div class="main-text">
+            <h2>Main section</h2>
+          </div>
+          <div class="chapters">
+            <article>
+              <h3>One more section 1</h3>
+            </article>
+            <article>
+              <h3>One more section 2</h3>
+            </article>
+            <article class="chapter-big">
+              <h3>One more section 3</h3>
+            </article>
+          </div>
         </div>
-        <article class="chapter-1">
-          <h3>One more section 1</h3>
-        </article>
-        <article class="chapter-2">
-          <h3>One more section 2</h3>
-        </article>
-        <article class="chapter-3">
-          <h3>One more section 3</h3>
-        </article>
-      </div>
-      <aside class="aside">
-        <h2>Aside</h2>
-      </aside>
+        <aside class="aside">
+          <h2>Aside</h2>
+        </aside>
+      </main>
       <footer class="footer">
         <section>
           <h3>Footer section 1</h3>
